# bevy_jam_2

./: .gitignore  Cargo.toml  LICENSE  README.md  tasks.todo
.github/workflows/: release.yaml
assets/animations/: cart.animation.yml  factory_off.animation.yml  factory_on.animation.yml  factory_tutorial.animation.yml  ship_furl.animation.yml  ship_idle.animation.yml  ship_unfurl.animation.yml  splashes.animation.yml  torch-off.animation.yml  torch.animation.yml
assets/audio/: music.txt  song-maker.mid
assets/shaders/: custom_sprite.wgsl
raw_art/: background.aseprite
raw_data/: effects.aup3  effects.aup3-shm  effects.aup3-wal  music.mscz  wind.aup3
src/: audio.rs  camera.rs  input.rs  loader.rs  main.rs
src/game/: components.rs  custom_sprite.rs  day_night_cycle.rs  debug.rs  mod.rs  rng.rs
src/game/actions/: detect_crate_drop_on_target.rs  dragging.rs  dropping.rs  mod.rs  pickup.rs
src/game/animation/: animate_entity.rs  animate_x.rs  animation.rs  effects.rs  mod.rs  ship_bob.rs  splashes.rs  waves.rs
src/game/factory/: events.rs  mod.rs  production.rs  recipes.rs  utils.rs
src/game/market/: market_movement.rs  mod.rs
src/game/ship_launch/: mod.rs
src/game/spawners/: cart.rs  mod.rs  physics_crate.rs  request.rs  ship.rs  torch.rs
src/game/ui/: button_interaction.rs  cart_request.rs  countdown_timer.rs  factory.rs  game_ui_bar.rs  launch_ships.rs  market.rs  menu.rs  mod.rs  production_queue.rs  request_ship.rs  score.rs  ship_demand.rs  ship_respawn_bar.rs  ship_ui.rs  tutorial.rs
wasm/: index.html
