[package]
name = "the_company"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["William Hart <hart.wl@gmail.com>"]
exclude = ["dist", "build", "assets", "credits"]


[dependencies]
anyhow = "1"
benimator = {version = "4.0.0-rc.1", features = ["serde"] }
bevy = "0.8"
bevy_asset_loader = { version = "0.12", features = ["stageless", "2d"] }
bevy_prototype_debug_lines = { version = "0.8", optional = true }
bevy_kira_audio = { version = "0.12", features = ["ogg", "wav"] }
heron = { version = "4.0.0", features = ["2d"] }
iyes_loopless = "0.7.1"
leafwing-input-manager = "0.5.1"
num-format = "0.4.0"
rand = "0.8"
rand_chacha = "0.3"
serde_yaml = "0.9.9"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[features]
default = ["heron/debug-2d"]
debug_system = ["bevy_prototype_debug_lines", "heron/debug-2d"]
